infra/k8s/alpha/common/ingress-hosts-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podverse-ingress
  namespace: podverse-alpha
  annotations:
    # This overrides the base 'letsencrypt-prod' annotation
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - secretName: podverse-tls-cert
      hosts:
        - api-alpha-podverse.k.podverse.fm
        - alpha-podverse.k.podverse.fm
  rules:
    - host: api-alpha-podverse.k.podverse.fm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podverse-api
                port:
                  number: 3000
    - host: alpha-podverse.k.podverse.fm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podverse-web
                port:
                  number: 3002
    - host: management-api-alpha-podverse.k.podcastdj.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podverse-management-api
                port:
                  number: 3100
    - host: management-alpha-podverse.k.podcastdj.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podverse-management-web
                port:
                  number: 3102
